--- a/code.html
+++ b/code.html
@@ -65,7 +65,7 @@
         var ausgabe = document.getElementById("ausgabe");
         var eingabe = document.getElementById("text").value;
         if (eingabe == "264") {
-            ausgabe.innerHTML = "Nächster Hinweis";
+            ausgabe.innerHTML = "Nächster Hinweis hier";
         } else{
             ausgabe.innerHTML = "Falscher Code";
         };
