--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         var ausgabe = document.getElementById("ausgabe");
         var eingabe = document.getElementById("text").value;
         if (eingabe == "264") {
-            ausgabe.innerHTML = "Nächster Hinweis hier";
+            ausgabe.innerHTML = "Nächster Hinweis";
         } else{
             ausgabe.innerHTML = "Falscher Code";
         };
