--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     function check_zwei(){
         var ausgabe_zwei = document.getElementById("ausgabe-2");
         var eingabe_zwei = document.getElementById("text-2").value;
-        if (eingabe_zwei == "264") {
+        if (eingabe_zwei == "2DxF74") {
             ausgabe_zwei.innerHTML = "Nächster Hinweis hier";
         } else{
             ausgabe_zwei.innerHTML = "Falsches Passwort";
