--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         var ausgabe = document.getElementById("ausgabe");
         var eingabe = document.getElementById("text").value;
         if (eingabe == "264") {
-            ausgabe.innerHTML = "Nächster Hinweis";
+            ausgabe.innerHTML = "Hinter dem, was Schnetz macht";
         } else{
             ausgabe.innerHTML = "Falscher Code";
         };
@@ -104,7 +104,7 @@
         var eingabe_zwei = document.getElementById("text-2").value;
         eingabe_zwei = eingabe_zwei.toUpperCase();
         if (eingabe_zwei == "2DXF74") {
-            ausgabe_zwei.innerHTML = "Nächster Hinweis hier";
+            ausgabe_zwei.innerHTML = "Treppe oder Moos?";
         } else{
             ausgabe_zwei.innerHTML = "Falsches Passwort";
         };
