--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         var eingabe_zwei = document.getElementById("text-2").value;
         eingabe_zwei = eingabe_zwei.toUpperCase();
         if (eingabe_zwei == "2DXF74") {
-            ausgabe_zwei.innerHTML = "Treppe oder Moos?";
+            ausgabe_zwei.innerHTML = "Der Schlüssel ist bei dem, das komischerweise ein Ablaufdatum hat.";
         } else{
             ausgabe_zwei.innerHTML = "Falsches Passwort";
         };
